<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.github.xylsh.AddMsgActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:orientation="vertical" >

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/phoneNumEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:hint="@string/add_peple_hint"
            android:inputType="phone"
            android:textSize="18sp"
            bootstrapbutton:be_roundedCorners="true"
            bootstrapbutton:be_state="success" />

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/msgContentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="8"
            android:hint="@string/add_msg_hint"
            android:inputType="textMultiLine"
            android:minLines="1"
            
            android:textSize="18sp"
            bootstrapbutton:be_roundedCorners="true"
            bootstrapbutton:be_state="success" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_alignParentLeft="true"
                
                android:gravity="center"
                android:text="@string/time_demo_text"
                android:textSize="20sp" />

            

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/setTimeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_alignParentRight="true"
                
                android:text="@string/set_time_button"
                bootstrapbutton:bb_roundedCorners="true"
                bootstrapbutton:bb_size="default"
                bootstrapbutton:bb_type="primary" />
            
            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/setDateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_toLeftOf="@id/setTimeButton"
                
                android:text="@string/set_date_button"
                bootstrapbutton:bb_roundedCorners="true"
                bootstrapbutton:bb_size="default"
                bootstrapbutton:bb_type="primary" />
            
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/addMsgButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            
            android:text="@string/add_button"
            android:textSize="20sp"
            
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_size="default"
            bootstrapbutton:bb_type="primary" />
    </LinearLayout>

</LinearLayout>
